# cmf

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  PATENTS.md  README.md  README.ru.md  README.zh.md  SECURITY.md  VMF_principles_in_CMF.md  VMF_principles_in_CMF.ru.md  VMF_principles_in_CMF.zh.md  justfile  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
converter/: convert_dtgma_to_cmf.py  gdn_layer.py  heal_vmf_phase.py  import_gguf.py  make_skill_l1fcd.py
crates/cortiq-cli/: Cargo.toml
crates/cortiq-cli/src/: convert.rs  gguf.rs  gptq.rs  main.rs  npy.rs  skill.rs
crates/cortiq-core/: Cargo.toml
crates/cortiq-core/src/: format.rs  hash.rs  lib.rs  mask.rs  quant.rs  types.rs
crates/cortiq-core/tests/: roundtrip.rs  vbit_golden.rs
crates/cortiq-core/tests/fixtures/: vbit_golden.json
crates/cortiq-engine/: Cargo.toml
crates/cortiq-engine/examples/: decode_flat.rs  matvec_bw.rs  pool_lat.rs  q4_layout_ab.rs
crates/cortiq-engine/src/: attention.rs  fcd.rs  fcd_ops.rs  gptq_capture.rs  gpu.rs  gpu_metal.rs  gpu_wgpu.rs  inference.rs  kv_cache.rs  lib.rs  linear_core.rs  loader.rs  nystrom.rs  pipeline.rs  pool.rs  qtensor.rs  router.rs  runtime.rs  sampler.rs  skillbake.rs  swarm.rs  tokenizer.rs
crates/cortiq-engine/tests/: chat_template_parity.rs  fcd_gradcheck.rs  fcd_runtime_parity.rs  fcd_train.rs  gdn_oracle.rs  golden_parity.rs  gpu_micro.rs  mask_quant.rs  nystrom_parity.rs  o1_runtime.rs  skills.rs  tokenizer_parity.rs  x86_gemm.rs
crates/cortiq-engine/tests/data/: nystrom_golden.json
crates/cortiq-engine/tests/fixtures/: gdn_golden.json
crates/cortiq-ffi/: Cargo.toml  README.md
crates/cortiq-ffi/include/: cortiq.h
crates/cortiq-ffi/src/: lib.rs
crates/cortiq-ffi/tests/: e2e.rs
crates/cortiq-server/: Cargo.toml
crates/cortiq-server/src/: api.rs  dashboard.rs  lib.rs  openai.rs  streaming.rs
crates/cortiq-server/static/: dashboard.html
demo/: swarm_demo.sh
docs/: CMF_V2_SPEC.md  CMF_V2_SPEC.ru.md  CMF_V2_SPEC.zh.md  COMPARISON.md  COMPARISON.ru.md  COMPARISON.zh.md  Q1T_PTQ.md  RUST_FCD.md  SKILLS.md  SKILLS.ru.md  SKILLS.zh.md
docs/skills-demo/: eval-ru.txt  prompts-ru.txt  prompts-sql.txt  prompts-think.txt
python/: cmf_reader.py  pyproject.toml
tests/: bench.sh  calibration_gate.sh  chat_template_parity.sh  compact_gate.sh  diff_gate.sh  gen_chat_cases.py  gen_gdn_golden.py  gen_moe_case.py  gen_reference.py  gen_tokenizer_cases.py  golden_parity.sh  gpu_wgpu_gate.sh  make_tiny_model.py  moe_parity.sh  moe_vbit.sh  moe_vbit_check.py  py_reader.sh  py_reader_check.py  py_roundtrip.sh  repack_fused_moe.py  serve_smoke.sh  state_gate.sh  tokenizer_parity.sh
tools/: gen_nystrom_golden.py
