[workspace]
members = [
    "crates/cortiq-core",
    "crates/cortiq-engine",
    "crates/cortiq-server",
    "crates/cortiq-cli",
    "crates/cortiq-ffi",
]
resolver = "2"

# Roadmap §5: portable release stays the default; LTO + single codegen
# unit keep the NEON/SDOT hot loops inlined across crate boundaries.
[profile.release]
lto = "thin"
codegen-units = 1

[workspace.package]
version = "0.5.17"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Oleg Kirichenko <urevich55@gmail.com>"]
repository = "https://github.com/infosave2007/cmf"
homepage = "https://github.com/infosave2007/cmf"
readme = "README.md"
keywords = ["llm", "inference", "quantization", "model-format", "gpu"]
categories = ["science"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
# Async
tokio = { version = "1", features = ["full"] }
# HTTP
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
# Memory
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
# Tokenizer (HF byte-level BPE parity: lookahead regex + NFC)
fancy-regex = "0.14"
unicode-normalization = "0.1"
# Chat template rendering (Jinja, HF-compatible)
minijinja = { version = "2", features = ["loop_controls"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
base64 = "0.22"
# CLI
clap = { version = "4", features = ["derive"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Utils
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
