[package]
name = "cortiq-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI for embedding the CMF runtime in native apps (Android/iOS/desktop)"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
cortiq-core = { path = "../cortiq-core", version = "0.3.10" }
cortiq-engine = { path = "../cortiq-engine", version = "0.3.10" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
