[package]
name = "cortiq-server"
version.workspace = true
edition.workspace = true
description = "OpenAI-compatible HTTP serving for CMF models, built on the cortiq inference engine."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
cortiq-core = { path = "../cortiq-core", version = "0.5.17" }
cortiq-engine = { path = "../cortiq-engine", version = "0.5.17" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
